<resources>
    <string name="app_name">Stock Count</string>
    <string name="ver_info">Stock Count by Socket Mobile\nVersion</string>
    <string name="terms">This demo app uses Socket Mobile\'s Capture SDK. As part of the SDK, the source code is available for adaptation per your business under the Socket Mobile terms and agreements.\n\n</string>
    <string name="instruction_1">Connect your Socket scanner in Application Mode (with Socket Mobile Companion app)</string>
    <string name="instruction_2">Start scanning item barcode to your text file. Quantity (default as 1) will be automatically added for each scan</string>
    <string name="instruction_3">Change scan settings to fit your need"</string>
    <string name="app_key">MCwCFECPmd7v70f10AV2u0HktBj9dIE4AhRzXYD69BkU4jm1yRPEpGOtblzfNQ==</string>
    <string name="bundle_id">android:com.socketmobile.stockcount</string>
    <string name="developer_id">BB57D8E1-F911-47BA-B510-693BE162686A</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_title">123</string>
    <string name="alpha_title">abc</string>
    <string name="share_via">Share via</string>
    <string name="prompt_install_companion">In order to connect to your Socket Mobile scanner in Stock Count app, you need to install and run Socket Mobile Companion app from Google Play Store.</string>
    <string name="install">Install</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="companion_store_url">https://play.google.com/store/apps/details?id=com.socketmobile.companion</string>
    <string name="preview_prefix">The result will look like:\n</string>
    <string name="temp_barcode">[barcode]</string>
    <string name="no_connected_socket_scanner">No Socket scanner is connected.</string>
    <string name="make_sure_your_scanner_is_on">Make sure your scanner is powered on and connected in Application Mode.</string>
    <string name="try_again">Try again</string>
    <string name="launch_companion">Launch Companion to connect in Application Mode</string>
    <string name="prompt_launch_the_camera">If you continue without a connected scanner, the app will launch the camera on your device for scanning.</string>
    <string name="use_camera">Use Camera</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="add_file">Add File</string>
    <string name="options">Options</string>
    <string name="scan">SCAN</string>
    <string name="scan_settings">Scan Settings</string>
    <string name="get_started">Get Started</string>
    <string name="learn_more_about_the">Learn more about the</string>
    <string name="capture_sdk">Capture SDK.</string>
    <string name="automatically_add_quantity">Automatically add quantity</string>
    <string name="quantity_format_options">Quantity format options</string>
    <string name="comma_format">Comma, space and quantity</string>
    <string name="no_comma_format">Space and quantity</string>
    <string name="set_default_quantity_as">Set default quantity as</string>
    <string name="new_line_start">Start new scan in a new line</string>
    <string name="semicolon_start">Start new scan after semicolon</string>
    <string name="vibrate_when_scans">Vibrate when scans</string>
    <string name="support_d600">Support D600</string>
    <string name="sdk_github_url">https://github.com/SocketMobile</string>
    <string name="title_companion_dialog">Companion Dialog</string>
    <string name="feature_will_be_soon">This feature will be available soon.</string>
    <string name="buy_scanner">Buy Scanner</string>
    <string name="consolidating_counts_option_label">Consolidating counts before sharing the file</string>

    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="center_the_barcode">Center the barcode in the view to scan</string>
    <string name="title_scan_barcode">Scan Barcode</string>
</resources>
