<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScanSettingsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/automatically_add_quantity"/>
                <Switch
                    android:id="@+id/addQuantitySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settings_side_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_format_options"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/commaCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/commaCheckImageView"
                    android:layout_width="@dimen/check_size"
                    android:layout_height="@dimen/check_size"
                    android:src="@drawable/icon_check"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@string/comma_format"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/settings_side_margin"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:id="@+id/noCommaCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/noCommaCheckImageView"
                    android:layout_width="@dimen/check_size"
                    android:layout_height="@dimen/check_size"
                    android:src="@drawable/icon_check"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@string/no_comma_format"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@android:color/white"
                android:padding="@dimen/settings_side_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_default_quantity_as"/>
                <TextView
                    android:id="@+id/defaultQuantityTextView"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:padding="@dimen/margin_small"
                    android:text="50"
                    android:gravity="center"
                    android:background="@drawable/textview_round"/>
                <ImageButton
                    android:id="@+id/minusQuantityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:src="@drawable/ic_remove_black_24dp"
                    android:tint="@android:color/holo_blue_light"
                    android:background="@drawable/button_round_left"
                    android:paddingLeft="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"/>
                <ImageButton
                    android:id="@+id/plusQuantityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-2dp"
                    android:src="@drawable/ic_add_black_24dp"
                    android:tint="@android:color/holo_blue_light"
                    android:background="@drawable/button_round_right"
                    android:paddingLeft="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/newLineCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_normal"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/newLineCheckImageView"
                    android:layout_width="@dimen/check_size"
                    android:layout_height="@dimen/check_size"
                    android:src="@drawable/icon_check"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@string/new_line_start"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/settings_side_margin"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:id="@+id/semiColonCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/semiColonCheckImageView"
                    android:layout_width="@dimen/check_size"
                    android:layout_height="@dimen/check_size"
                    android:src="@drawable/icon_check"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:text="@string/semicolon_start"/>
            </LinearLayout>
            <TextView
                android:id="@+id/previewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vibrate_when_scans"/>
                <Switch
                    android:id="@+id/vibrateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_normal"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white"
                android:visibility="gone">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/support_d600"/>
                <Switch
                    android:id="@+id/supportD600Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/settings_side_margin"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/consolidating_counts_option_label"/>
                <Switch
                    android:id="@+id/consolidatingCountsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
